hphp/hack/test/typecheck/like_types/dynamic_coercion/decl_types/tprim.php.exp
File "tprim.php", line 11, characters 10-14:
Invalid return type (Typing[4110])
File "tprim.php", line 10, characters 19-22:
This is void
File "tprim.php", line 4, characters 17-23:
It is incompatible with a dynamic value
File "tprim.php", line 11, characters 3-15:
You cannot return a value (Typing[4084])
File "tprim.php", line 10, characters 19-22:
This is a void function
File "tprim.php", line 39, characters 10-14:
Invalid return type (Typing[4110])
File "tprim.php", line 38, characters 23-30:
This is noreturn (throws or exits)
File "tprim.php", line 4, characters 17-23:
It is incompatible with a dynamic value
